styling for offers and submissions page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,8 @@
 
 *= require defaults
 *= require helpers
+*= require header
+*= require submissions
 *= require offers
 *= require selected_offers
 
