--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -1,16 +1,48 @@
-.results {
+.results-page {
+  padding: 2rem;
+}
 
+.results, .btn-container, .offers-subheading {
+    max-width: 1300px;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .offer {
 
 }
 
-.selected {
-    background-color:red;
+.offers-subheading {
+    color: #888;
+    font-style: italic;
 }
 
+.selected {
+    background-color: #e9fbdc;
+}
 
+th {
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+tr {
+  cursor: pointer;
+}
+
+th, td {
+  padding: .4rem;
+}
+
+.btn-container {
+  text-align: right;
+    padding-right: 3rem;
+    margin-top: 1rem;  
+}
+
+.btn-results {
+
+}
 
 
 
@@ -55,7 +87,8 @@ th.reactable-header-sortable:after {
 
 th.reactable-header-sort-desc, th.reactable-header-sort-asc {
     outline: 0;
-  background-color: #fffcab;
+  /*background-color: #fffcab;*/
+    color: #6ae4c4;
     /*color: #777;  */
 }
 
@@ -88,4 +121,8 @@ tr.reactable-filterer td {
   margin-bottom: 7px;
   margin-right: 20px;
   padding: 5px;
+    margin-left: 0;
+    padding: 0.6rem;  
+    margin-bottom: 1.4rem;    
+    left: -8px;    
 }
