--- a/app/assets/stylesheets/selected_offers.css
+++ b/app/assets/stylesheets/selected_offers.css
@@ -1,4 +1,13 @@
-.selected_offers {
+.selected-offers {
     max-width: 1300px;
     width: 90%;
+    margin: 0 auto;
+}
+
+.selected-offers div:nth-child(1) {
+    margin-bottom: 2rem;
+}
+
+.graph {
+
 }
